--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "dev": "next dev",
   "build": "next build",
   "start": "next start",
+  "postinstall": "prisma generate",
   "prisma:generate": "prisma generate",
   "prisma:migrate": "prisma migrate dev",
   "prisma:seed": "node prisma/seed.cjs"
-	},
+},
 	"prisma": {
   	"seed": "node prisma/seed.cjs"
 	},
